# abagnale

./: README.md  package.json  test.txt  vercel.json
api/: date.py  find.py
components/: EntitiesGraph.js  EntitiesTable.js  FiletypePicker.js  FilterForm.js  ResultsTable.js
pages/: _app.js  app.css  index.js
pages/api/: find.js  iosco.csv
scraper/: extract_metadata.ipynb  process_entities.ipynb  process_finma.ipynb  process_iosco.ipynb  pyproject.toml
scraper/data/: merge_sources.ipynb  process_cats.ipynb  process_entities.ipynb  process_finma.ipynb  process_iosco.ipynb  process_searches.ipynb
scraper/data/outputs/: entities.json
scraper/data/sources/: cats.html
scraper/data/sources/searches/: bitcoin.html  forex.html  invest.html
scraper/outputs/: iosco.csv
scraper/scraper/: __init__.py  entities.py  parallel.py  site.py  url.py  utils.py  web.py
scraper/sources/: finma.html  iosco.html  iosco.readme
scraper/test/: mock_search.ipynb  web.ipynb
