[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
plotly = "^4.13.0"
lxml = "^4.6.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.0"
tqdm = "^4.54.0"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
